Use 2.1.2 for SolarisMonitor

--- a/manifest.json
+++ b/manifest.json
@@ -82,7 +82,7 @@
         }, 
         "enterprise_zenpacks/ZenPacks.zenoss.SolarisMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.SolarisMonitor", 
-            "ref": "2c5fc6ba42b55e8b78ee5fc9e601c66c52ad6eee"
+            "ref": "2.1.2"
         }, 
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoUCS": {
             "repo": "zenoss/ZenPacks.zenoss.CiscoUCS", 
